# javanotebook

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml  requirements.txt
examples/: 0911_platform_summary.md  2025_0916_notebook copy.ipynb  2025_0916_notebook.ipynb  2025_0923_notebook.ipynb  2025_0925_notebook.ipynb  2025_0925_notebook_test.ipynb  algorithms.ipynb  algorithms.md  basic_java.ipynb  basic_java.md  data_structures.md  package_test.ipynb  package_test.md
src/javanotebook/: __init__.py  __main__.py  exceptions.py  executor.py  format_detector.py  main.py  models.py  nb_executor.py  nb_models.py  nb_parser.py  package_manager.py  parser.py  project_executor.py
src/javanotebook/routers/: __init__.py  api.py
src/javanotebook/static/css/: jupyter_notebook.css  style.css
src/javanotebook/static/js/: jupyter_notebook.js  notebook.js
src/javanotebook/templates/: jupyter_notebook.html  notebook.html
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_jupyter_api.py
tests/unit/: test_format_detector.py  test_models.py  test_nb_executor.py  test_nb_models.py  test_nb_parser.py  test_parser.py
